[project]
name = "climate-visibility-new"
version = "0.1.0"
description = ""
authors = [
    {name = "Vedika Agrawal",email = "vedika1432@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "boto3 (>=1.43.9,<2.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "z3-solver (>=4.16.0.0,<5.0.0.0)",
    "torch (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
